@@ -1,5 +1,10 @@
 2007-02-02  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Move *.ram to application/ram, patch
+	from Daniel Yek <dyek@real.com> (Closes: #9750)
+
+2007-02-02  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Make PGM, PBM and PPM sub-classes
 	of PNM (RH #118847)
 
